@@ -1,7 +1,9 @@
 DIST smplayer2-0.7.0_pre20111120.tar.xz 1165876 RMD160 e739a771d57a5fac7765498912a31fd1368947cd SHA1 2dd650fab4ccb385b3fba7574ad1300f3ce89607 SHA256 d7b2046ce4e94621c8ed88e068bce0fd7bf42137b54a16fa3cce677b0ad5d0b5
 DIST smplayer2-0.7.1_p20120301.tar.xz 1039036 RMD160 38c71ed95332ba5b2657cf9b1d8d80567345451a SHA1 b05cdbd6b9ca37ff3e0cf3f4c48cb5f6d05080cb SHA256 fb1b09f62f6f06e3544cbc64444bb5ea9484a3a973d445949f95fd3695686dbe
+DIST smplayer2-0.7.2_p20120522.tar.xz 1034192 RMD160 a305037c9dcce6dfdb479f9ff7ff63ef983cc1a2 SHA1 03d573b7b6abfe8e4f53651b97e298decf5d39ad SHA256 ae5dfe328208dc34a53d1439a9cbc1b4f3197fca2dd6e10f2fa5725296617e49
 EBUILD smplayer2-0.7.0_pre20111120.ebuild 1159 RMD160 9312c19b826a20301aa6f5a570236fdeb2f38e43 SHA1 69b044b353646557124f664907a723002ced5970 SHA256 2112c0083dd999d2e1eeeb55e020f022852a3eb4986acf76414eaa0e233ae2b1
 EBUILD smplayer2-0.7.1_p20120301.ebuild 1159 RMD160 6b72eeedf0eb2913f50d3c7e07bb8159d507e2ce SHA1 b960e8c48845ad8d78279776aa8b1d51b9c36e0c SHA256 bad7a0d4fddff36e5f3ec2e52328868f8b46ae2cebecf6bc8e45ac079e047a12
-EBUILD smplayer2-9999.ebuild 1135 RMD160 1a93281b350dfcb08cbbb935783e87c7ac2ffb88 SHA1 3f48fe67d16fe7b5424b24eef7f67aae3a1a82f8 SHA256 72bd70bc84ea1d45b90bb167b29e35a56a6bb9ec7f4c88cbbe905e38edbfcce3
-MISC ChangeLog 1309 RMD160 e1e8eef4067ed8e53c097c570e3fceb99e06198c SHA1 3f04269277fa56d0fabb99429b7220d530aba0b7 SHA256 3192b81da4f86fb8a96c95221474653cffc72852c853827dd86d37c222ab4d71
+EBUILD smplayer2-0.7.2_p20120522.ebuild 1211 RMD160 593e8b226249896384dd4d0acc402bcc6b23247d SHA1 933aab577648bdd0a2fa4f8e60063f7de9c3a3f6 SHA256 0d76eb8a5561476153b175dae7a4cecc9b0d35ce82e422951d6941a6a3f2eff1
+EBUILD smplayer2-9999.ebuild 1187 RMD160 ae5ea9c5be49bc2573fa7ccd9f0631b318ca75ba SHA1 26b27198cae8f38b5caca1e499112f3efde165f8 SHA256 5999852ffa5a80e29cab851b097a443457d0c2372749f03157ff445339b23f7b
+MISC ChangeLog 1484 RMD160 05ca95b12dfa23b892587d07afa059715427bd6a SHA1 7e4f2bdfe0fdb5dc341597ab0c70f3d935c284e8 SHA256 7ce247abe26126d582b87410663154be51c4239a029d6836ad4caf303edbcafb
 MISC metadata.xml 450 RMD160 cd2c4ebf0bf6117c1f687debb852f047f1fe26b3 SHA1 5b722a28c53371f1842de9a5f5a94845dd72353c SHA256 71db0f73a5c68b0c249a1ae3c3bc12e31bf6ad51af8451706b0327c5d515e7c7
