@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*smplayer2-0.7.2_p20120522 (23 May 2012)
+
+  23 May 2012; Nikoli <nikoli@lavabit.com> +smplayer2-0.7.2_p20120522.ebuild,
+  smplayer2-9999.ebuild:
+  version bump, add USE dbus
+
 *smplayer2-0.7.1_p20120301 (23 Mar 2012)
 
   23 Mar 2012; Nikoli <nikoli@lavabit.com> +smplayer2-0.7.1_p20120301.ebuild,
